Various style fixes. - Added a top-bar, currently with the search bar and page title. - Adjust font sizes on small screens. Adjust how the notification works. Class is adjusted, not the height.

--- a/assets/css/wiki.css
+++ b/assets/css/wiki.css
@@ -33,7 +33,8 @@ svg {
   height: 1em;
   width: 1em;
   bottom: -0.125em;
-  position: absolute; }
+  position: absolute;
+  z-index: 0; }
   .svg-icon svg.history {
     width: 1.0625em; }
 
@@ -59,20 +60,21 @@ a {
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
-  font-size: 1.0em;
+  font-size: 0.85em;
   line-height: 1.5;
   background-color: #fefefe;
   display: grid;
   grid-column-gap: 20px;
   grid-row-gap: 0;
-  grid-template-areas: "header" "tabs" "content" "nav"         "footer"; }
+  grid-template-areas: "header" "tabs" "content" "nav" "search" "footer"; }
 
 body > header {
   grid-area: header;
   max-height: 3.5rem;
-  min-height: 3.5rem; }
+  min-height: 3.5rem;
+  align-self: center; }
   body > header > h1 {
-    margin: 0; }
+    margin: 0 0.5rem; }
 
 body > main {
   grid-area: content;
@@ -99,15 +101,17 @@ body > nav {
     padding: 5px 0;
     list-style-type: none; }
   body > nav fieldset {
-    margin: 10px; }
+    margin: 0.5rem; }
 
 body > footer {
   grid-area: footer;
   text-align: center;
   font-size: 80%; }
 
-.stat {
-  color: #8a8a8a; }
+div.searchwiki {
+  grid-area: search;
+  align-self: center;
+  margin: 0 0.5rem; }
 
 .tabs {
   grid-area: tabs;
@@ -129,6 +133,9 @@ body > footer {
       border: 1px dashed #202020; }
       .tabs li a:hover {
         background-color: #202020; }
+
+.stat {
+  color: #8a8a8a; }
 
 .frontmatter {
   display: flex;
@@ -152,10 +159,11 @@ table {
   border-collapse: collapse; }
 
 #notification {
+  z-index: 1;
   position: fixed;
-  top: 0em;
+  top: -2.3em;
   left: 0;
-  height: 35px;
+  height: 2.3em;
   width: 100%;
   padding: 0 1em;
   overflow: hidden;
@@ -171,33 +179,9 @@ table {
   -o-transition: top 0.6s ease-out;
   transition: top 0.6s ease-out; }
 
-.notification.active {
+#notification.active {
   top: 0; }
 
-.notification .actions {
-  margin-top: 0.5em; }
-
-.notification .btn {
-  border: 1px solid #f0c36d;
-  background: #f0c36d;
-  color: #fff;
-  display: inline-block;
-  padding: 0.3em; }
-
-.notification .dismiss-btn {
-  display: inline-block;
-  margin-left: 1em; }
-
-@media all and (min-width: 50em) {
-  .notification .msg {
-    float: left;
-    width: 70%; }
-
-  .notification .actions {
-    float: right;
-    text-align: right;
-    width: 30%;
-    margin-top: -0.3em; } }
 .close-button {
   display: inline-block; }
 
@@ -249,7 +233,6 @@ pre, code {
     padding-top: 5px; }
     .preview-tabs li a {
       display: inline-block;
-      font-size: 1rem;
       position: relative;
       border: none;
       outline: none;
@@ -277,17 +260,20 @@ pre, code {
   padding: 5px 15px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px; }
+  display: inline-block; }
 
 .button.delete {
   background-color: #f44336; }
 
 @media (min-width: 768px) {
   body {
-    grid-template-areas: "nav    header" "nav    tabs" "nav    content" "nav    footer";
+    font-size: 1em;
+    grid-template-areas: "header search" "nav    tabs" "nav    content" "nav    footer";
     grid-template-columns: 240px 10fr;
     grid-template-rows: 50px 24px auto minmax(10px, 50px); }
+
+  div.searchwiki {
+    justify-self: end; }
 
   .tabs {
     flex-direction: row; }
